2008-12-13  Vincent Torri  <doursse at users dot sf dot net>

	* src/bin/Makefile.am:
	* src/bin/evil_test_dlfcn.c:
	* src/bin/evil_test_dlfcn.h:
	add dflcn unit test

	* src/bin/evil_suite.c:
	show result of the unit tests and add dlfcn unit test

	* src/bin/evil_test_environment.c:
	remove debug

	* src/bin/evil_test_gettimeofday.c:
	debug, not working yet :/

	* src/bin/evil_test_link.c:
	* src/lib/evil_link_ce.c:
	fix link support on Windows CE

2008-12-10  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	be sure to include stdio.h before redefining the
	functions that are declared int it.

2008-12-09  Vincent Torri  <doursse at users dot sf dot net>

	* src/bin/evil_test_gettimeofday.c:
	add output

	* src/bin/evil_test_link.c:
	add a unit test for readlink()

	* src/lib/evil_link_xp.cpp:
	fix readlink() and symlink() on Windows XP

2008-12-05  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_main.c:
	always export evil_init() and evil_shutdown()

2008-12-03  Vincent Torri  <doursse at users dot sf dot net>

	* src/bin/evil_test_gettimeofday.c:
	replace evil_gettimeofday by gettimeofday

	* src/lib/evil_string.c:
	* src/lib/evil_string.h:
	add strcoll() "port" to Windows CE OS. Note it's
	just strcmp, no locale stuff is used onn that OS.

2008-11-29  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_main.c:
	define correctly EAPI

2008-11-21  Vincent Torri  <doursse at users dot sf dot net>

	* src/bin/Makefile.am:
	* src/bin/evil_suite.c:
	* src/bin/evil_test_gettimeofday.c:
	* src/bin/evil_test_gettimeofday.h:
	add a small test for gettimeofday

	* src/bin/evil_test_memcpy.c:
	fix warning

	* src/lib/Evil.h:
	* src/lib/Makefile.am:
	* src/lib/evil_main.c:
	* src/lib/evil_main.h:
	* src/lib/evil_unistd.c:
	* src/lib/evil_unistd.h:
	* src/lib/evil_private.h:
	add gettimeofday for Windows CE natively. It is necessary
	to initialise evil with evil_init() now, to have that
	feature.

	* src/lib/evil_stdio.c: